Plots now have some basic control to prevent crowding.
I found it difficult to get the xaxis of my plots to
have labels that didn't get crowded when I had
multiple figures on one page. There is now some basic
mechanisim, in which we limit the number of labels
depending on how many plots we have on a page.

Also changed the save figure name so that it won't
automatically convert it to filename001.png if you
only have one plot.

Some other minor things, including updating of the
document, though still lots of formatting to do.

--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -1413,7 +1413,7 @@ The ACF plots (Figure 2) and low inefficiency factors of 12.6
 autocorrelation in the sample is low. %
 \begin{figure}
   \begin{center}
-    \includegraphics[width=16cm]{ex_loglinear001.pdf}
+    \includegraphics[width=16cm]{ex_loglinear.pdf}
   \end{center}
 \caption{Plots of the marginal posterior density, autocorrelation and trace
 plots for the MCMC estimation of the log linear model.}
@@ -1712,7 +1712,7 @@ is very efficient.
 \begin{figure}[h]
 \label{Flo:AR1}
 \begin{center}
-  \includegraphics{rho001.pdf}
+  \includegraphics{rho.pdf}
 \end{center}
 \caption{Marginal posterior density, autocorrelation function and trace plot
 based on the MCMC analysis.}
