--- a/INSTALL
+++ b/INSTALL
@@ -8,7 +8,7 @@ running the commands:
 sudo apt-get install python-scipy libatlas3gf-sse2
 sudo python setup.py install
 
-should be all you need. 
+should be all you need to do. 
 
 For other platforms, we recommend you install the binary versions,
 but if you need to build from source, see the instructions later
