Another minor change to see if I can work with the branch.

--- a/README
+++ b/README
@@ -14,4 +14,4 @@ libraries Numpy and Scipy, as well as being readily extensible with C
 or Fortran.
 
 This is the development version.
-
+And I modified this from a different computer.
