Fixed paragraph formatting PyMCMC.tex

--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -87,9 +87,7 @@
 \section{Introduction}
 
 The most common approach currently used in the estimation of Bayesian
-Models is Markov chain Monte Carlo (MCMC). 
-
-\pkg{PyMCMC} is a \proglang{Python} module that is designed to simplify the construction
+Models is Markov chain Monte Carlo (MCMC). \pkg{PyMCMC} is a \proglang{Python} module that is designed to simplify the construction
 of Markov chain Monte Carlo (MCMC) samplers, without sacrificing flexibility
 or performance. \proglang{Python} has extensive scientific libraries, is easily
 extensible, has a clean syntax and powerful programming constructs,
